--- a/finalProject/web/WEB-INF/web.xml
+++ b/finalProject/web/WEB-INF/web.xml
@@ -33,4 +33,13 @@
         <filter-name>AccessFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    <filter>
+        <filter-name>EncodingFilter</filter-name>
+        <filter-class>by.training.epam.seredinski.filter.EncodingFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>EncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
 </web-app>
